--- a/info.yaml
+++ b/info.yaml
@@ -1,56 +1,56 @@
 # Tiny Tapeout project information
 project:
-  title:        ""      # Project title
-  author:       ""      # Your name
-  discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  ""      # One line description of what your project does
+  title:        "8-bit Simple Computer"      # Project title
+  author:       "William Carter"      # Your name
+  discord:      "william_carter"      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
+  description:  "A programmable 8-bit computer with ALU, registers, and instruction memory"      # One line description of what your project does
   language:     "Verilog" # other examples include SystemVerilog, Amaranth, VHDL, etc
-  clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
+  clock_hz:     10000000       # Clock frequency in Hz (or 0 if not applicable) - set to 10MHz as a reasonable value
 
   # How many tiles your design occupies? A single tile is about 167x108 uM.
   tiles: "1x1"          # Valid values: 1x1, 1x2, 2x2, 3x2, 4x2, 6x2 or 8x2
 
   # Your top module name must start with "tt_um_". Make it unique by including your github username:
-  top_module:  "tt_um_example"
+  top_module:  "tt_um_william_carter"
 
   # List your project's source files here.
   # Source files must be in ./src and you must list each source file separately, one per line.
   # Don't forget to also update `PROJECT_SOURCES` in test/Makefile.
   source_files:
-    - "project.v"
+    - "tt_um_william_carter.v"
 
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
 # This section is for the datasheet/website. Use descriptive names (e.g., RX, TX, MOSI, SCL, SEG_A, etc.).
 pinout:
   # Inputs
-  ui[0]: ""
-  ui[1]: ""
-  ui[2]: ""
-  ui[3]: ""
-  ui[4]: ""
-  ui[5]: ""
-  ui[6]: ""
-  ui[7]: ""
+  ui[0]: "im_write_enable"
+  ui[1]: "im_addr_bit0"
+  ui[2]: "im_addr_bit1"
+  ui[3]: "im_addr_bit2"
+  ui[4]: "im_addr_bit3"
+  ui[5]: "pc_halt"
+  ui[6]: "pc_reset"
+  ui[7]: "execution_mode"
 
   # Outputs
-  uo[0]: ""
-  uo[1]: ""
-  uo[2]: ""
-  uo[3]: ""
-  uo[4]: ""
-  uo[5]: ""
-  uo[6]: ""
-  uo[7]: ""
+  uo[0]: "pc_bit0"
+  uo[1]: "pc_bit1"
+  uo[2]: "pc_bit2"
+  uo[3]: "pc_bit3"
+  uo[4]: "alu_result_bit0"
+  uo[5]: "alu_result_bit1"
+  uo[6]: "alu_result_bit2"
+  uo[7]: "alu_result_bit3"
 
   # Bidirectional pins
-  uio[0]: ""
-  uio[1]: ""
-  uio[2]: ""
-  uio[3]: ""
-  uio[4]: ""
-  uio[5]: ""
-  uio[6]: ""
-  uio[7]: ""
+  uio[0]: "data_bit0"
+  uio[1]: "data_bit1"
+  uio[2]: "data_bit2"
+  uio[3]: "data_bit3"
+  uio[4]: "data_bit4"
+  uio[5]: "data_bit5"
+  uio[6]: "data_bit6"
+  uio[7]: "data_bit7"
 
 # Do not change!
 yaml_version: 6
